fix: correct z-index to post-it when maximized

--- a/src/components/post-it/post-it.module.css
+++ b/src/components/post-it/post-it.module.css
@@ -45,7 +45,8 @@
 }
 
 .maximized,
-.maximized:has([aria-expanded="true"]) .maximized:focus-within {
+.maximized:has([aria-expanded="true"]),
+.maximized:focus-within {
   z-index: 3;
 }
 
